--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: snotelr
 Title: R toolbox to facilitate easy access / visualize SNOTEL data
 Version: 0.2
 Authors@R: person("Koen", "Hufkens", email = "koen.hufkens@gmail.com", role = c("aut", "cre"))
-Description: Provides easy access to SNOTEL data and provides summarizing statistics
+Description: Provides easy access to SNOTEL data and summarizing snow statistics
 Depends:
     R (>= 3.0.0)
 Imports:
@@ -17,7 +17,8 @@ Imports:
     stats,
     rvest,
     magrittr,
-    zoo
+    zoo,
+    RSelenium
 License: AGPL-3
 LazyData: true
 ByteCompile: true
