resolved import issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,5 @@ export(snotel_explorer)
 export(snotel_info)
 export(snotel_metric)
 export(snotel_phenology)
+importFrom(magrittr,"%>%")
+importFrom(stats,na.action)
