--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.2
 Authors@R: person("Koen", "Hufkens", email = "koen.hufkens@gmail.com", role = c("aut", "cre"))
 Description: Provides easy access to SNOTEL data and summarizing snow statistics.
 Depends:
-    R (>= 3.0.0)
+    R (>= 3.3.1)
 Imports:
     devtools,
     shiny,
@@ -20,6 +20,9 @@ Imports:
     zoo,
     wdman,
     RSelenium
+Suggests:
+    covr,
+    testthat
 License: AGPL-3
 LazyData: true
 ByteCompile: true
