--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,9 @@ r_packages:
   - devtools
   - covr
 
+r_github_packages:
+  - johndharrison/wdman
+  - ropensci/RSelenium  
+
 after_success:
 - Rscript -e 'covr::codecov()'
