--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: snotelr
 Title: Calculate and Visualize 'SNOTEL' Snowpack Data and Seasonality
-Version: 0.3
+Version: 0.3.1
 Authors@R: person("Koen", "Hufkens",
                   email = "koen.hufkens@gmail.com",
                   role = c("aut", "cre"))
@@ -11,7 +11,7 @@ Description: Programmatic interface to the 'SNOTEL' snowpack data
 URL: https://github.com/khufkens/snotelr
 BugReports: https://github.com/khufkens/snotelr/issues
 Depends:
-    R (>= 3.4.0)
+    R (>= 3.4)
 Imports:
     shiny,
     leaflet,
@@ -24,17 +24,16 @@ Imports:
     rvest,
     magrittr,
     zoo,
-    binman,
     wdman,
-    RSelenium
-Remotes:
-    johndharrison/binman,
-    johndharrison/wdman,
-    ropensci/RSelenium
+    RSelenium,
+    memoise
 Suggests:
+    knitr,
+    rmarkdown,
     covr,
     testthat
+VignetteBuilder: knitr
 License: AGPL-3
 LazyData: true
 ByteCompile: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
