--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,6 @@
-pandoc: 1.19.2.1
-pkgdown: 1.0.0
+pandoc: 2.1.2
+pkgdown: 1.1.0
 pkgdown_sha: ~
-articles: []
+articles:
+  snotelr-vignette: snotelr-vignette.html
 
