--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,11 @@ export(snotel_explorer)
 export(snotel_info)
 export(snotel_metric)
 export(snotel_phenology)
+importFrom(RSelenium,remoteDriver)
 importFrom(magrittr,"%>%")
+importFrom(memoise,memoise)
+importFrom(rvest,html_nodes)
+importFrom(rvest,html_table)
 importFrom(stats,na.action)
+importFrom(wdman,phantomjs)
+importFrom(xml2,read_html)
