--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: snotelr
-Title: Calculate and Visualize 'SNOTEL' Snowpack Data and Seasonality
+Title: Calculate and Visualize 'SNOTEL' Snow Data and Seasonality
 Version: 1.0.0
 Authors@R: person("Koen", "Hufkens",
                   email = "koen.hufkens@gmail.com",
                   role = c("aut", "cre"))
-Description: Programmatic interface to the 'SNOTEL' snowpack data
-  (<https://www.wcc.nrcs.usda.gov/snow/>). Provides easy downloads of snowpack 
-  data into your R workspace or a local directory. Additional post-processing 
+Description: Programmatic interface to the 'SNOTEL' snow data
+  (<https://www.wcc.nrcs.usda.gov/snow/>). Provides easy downloads of snow 
+  data into your R work space or a local directory. Additional post-processing 
   routines to extract snow season indices are provided.
 URL: https://github.com/khufkens/snotelr
 BugReports: https://github.com/khufkens/snotelr/issues
