--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,9 @@ Authors@R: c(person(
                given = "Koen",
                email = "koen.hufkens@gmail.com",
                role = c("aut", "cre"),
-               comment = c(ORCID = "0000-0002-5070-8109")))
+               comment = c(ORCID = "0000-0002-5070-8109")),
+              person(given = "BlueGreen Labs",
+                role = c("cph", "fnd")))
 Description: Programmatic interface to the 'SNOTEL' snow data
   (<https://www.wcc.nrcs.usda.gov/snow/>). Provides easy downloads of snow 
   data into your R work space or a local directory. Additional post-processing 
