--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: 2.14.0.3
+pandoc: '2.5'
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   snotelr-vignette: snotelr-vignette.html
-last_built: 2021-10-26T16:46Z
+last_built: 2021-11-15T19:10Z
 
