--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,5 @@ export(snotel_info)
 export(snotel_metric)
 export(snotel_phenology)
 importFrom(magrittr,"%>%")
-importFrom(rvest,html_nodes)
-importFrom(rvest,html_table)
+importFrom(memoise,memoise)
+importFrom(rvest,read_html)
