--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: 2.14.0.3
-pkgdown: 1.6.1
+pandoc: '2.18'
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   snotelr-vignette: snotelr-vignette.html
-last_built: 2021-11-21T09:21Z
+last_built: 2022-08-20T11:07Z
 
