fix links + docs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,11 @@ Authors@R: c(person(
               person(given = "BlueGreen Labs",
                 role = c("cph", "fnd")))
 Description: Programmatic interface to the 'SNOTEL' snow data
-  (<https://www.wcc.nrcs.usda.gov/snow/>). Provides easy downloads of snow 
+  (<https://www.nrcs.usda.gov/wps/portal/wcc/home>). Provides easy downloads of snow 
   data into your R work space or a local directory. Additional post-processing 
   routines to extract snow season indexes are provided.
-URL: https://github.com/khufkens/snotelr
-BugReports: https://github.com/khufkens/snotelr/issues
+URL: https://github.com/bluegreen-labs/snotelr
+BugReports: https://github.com/bluegreen-labs/snotelr/issues
 Depends:
     R (>= 3.6)
 Imports:
