--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -43,11 +43,11 @@ jobs:
             
       - name: Setup pandoc from r-lib
         if: runner.os == 'Windows'
-        uses: r-lib/actions/setup-pandoc@master
+        uses: r-lib/actions/setup-pandoc@main
 
       - name: Install tinytex from r-lib
         if: runner.os == 'Windows'
-        uses: r-lib/actions/setup-tinytex@master
+        uses: r-lib/actions/setup-tinytex@main
 
       - name: Query dependencies
         run: |
