--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -65,7 +65,7 @@ jobs:
           do
             eval sudo $cmd
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
-          sudo apt-get install libgdal-dev libproj-dev libgeos-dev libudunits2-dev netcdf-bin
+          sudo apt-get install libgdal-dev libproj-dev libgeos-dev libudunits2-dev netcdf-bin libicu66
 
       - name: Install system dependencies on MacOS (X11, gdal)
         if: runner.os == 'macOS'
