--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,14 +16,14 @@ Description: Programmatic interface to the 'SNOTEL' snow data
 URL: https://github.com/bluegreen-labs/snotelr
 BugReports: https://github.com/bluegreen-labs/snotelr/issues
 Depends:
-    R (>= 3.6)
+    R (>= 4.2)
 Imports:
     shiny,
     httr,
     utils,
     stats,
     rvest,
-    magrittr,
+    dplyr,
     memoise
 Suggests:
     knitr,
