--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(snotel_explorer)
 export(snotel_info)
 export(snotel_metric)
 export(snotel_phenology)
-importFrom(magrittr,"%>%")
 importFrom(memoise,memoise)
 importFrom(rvest,read_html)
+importFrom(stats,na.action)
+importFrom(stats,na.contiguous)
